--- a/.github/workflows/hwpy.yml
+++ b/.github/workflows/hwpy.yml
@@ -10,9 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v3
+      - uses: actions/checkout@v3
       - name: Install python
-        uses: action/setup/python@v2
+        uses: actions/setup/python@v2
         with:
           python-version: 3.9
       - name: Install deps
