--- a/.github/workflows/hwpy.yml
+++ b/.github/workflows/hwpy.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install python
-        uses: actions/setup/python@v2
+        uses: actions/setup-python@v2
         with:
           python-version: 3.9
       - name: Install deps
